--- a/ITunesPractice/Info.plist
+++ b/ITunesPractice/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>需要訪問您的媒體庫，以便允許在應用程式中選擇和播放音樂</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>以便聽到和辨識音樂</string>
 	<key>UIApplicationSceneManifest</key>
