--- a/ITunesPractice/Info.plist
+++ b/ITunesPractice/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>zh_TW</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>需要取得權限以便保存照片到您的相簿中</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要訪問您的相簿，以便存取照片</string>
+	<key>NSCameraUsageDescription</key>
+	<string>需要取得相機權限，以便拍攝照片</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
