Feat: 實現從 Youtube 下載歌曲功能，並透過Remote config 配合 ngrok 提供 API 網址

--- a/ITunesPractice/Info.plist
+++ b/ITunesPractice/Info.plist
@@ -2,23 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>zh_TW</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>需要取得權限以便保存照片到您的相簿中</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要訪問您的相簿，以便存取照片</string>
-	<key>NSCameraUsageDescription</key>
-	<string>需要取得相機權限，以便拍攝照片</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.773367406291-9jguqavt13l320kutp58f2ptedu7vooi</string>
+			</array>
+		</dict>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
